--- a/MusicDiary/app/src/main/AndroidManifest.xml
+++ b/MusicDiary/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MusicDiary">
-        <activity android:name=".ArtistActivity"></activity>
+        <activity android:name=".AlbumDetailsActivity"></activity>
+        <activity android:name=".ArtistActivity" />
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
